# zettawatt

./: .clang-format  .gitmodules  CMakeLists.txt  TODO
assets/data/: techgraph.json  theme.json
assets/shaders/: circle.frag  circle.vert  circlegauge.frag  circlegauge.vert  decal.frag  decal.vert  glowcircle.frag  glowcircle.vert  text.vert  thickline.frag  thickline.vert
game/: CMakeLists.txt  abstracttexture.h  fontcache.cpp  fontcache.h  gamewindow.cpp  gamewindow.h  glwindow.cpp  glwindow.h  ioutil.cpp  ioutil.h  lazytexture.cpp  lazytexture.h  loadprogram.cpp  loadprogram.h  main.cpp  noncopyable.h  pixeltype.h  pixmap.cpp  pixmap.h  shadermanager.cpp  shadermanager.h  shaderprogram.cpp  shaderprogram.h  spritebatcher.cpp  spritebatcher.h  techgraph.cpp  techgraph.h  texture.cpp  texture.h  textureatlas.cpp  textureatlas.h  textureatlaspage.cpp  textureatlaspage.h  theme.cpp  theme.h  tst_textbox.cpp  tst_textrendering.cpp  tween.h  uipainter.cpp  uipainter.h  (+3 more)
tools/editor/: CMakeLists.txt  autoadjustdialog.cpp  autoadjustdialog.h  autolayoutdialog.cpp  autolayoutdialog.h  boostwidget.cpp  boostwidget.h  costwidget.cpp  costwidget.h  editorwindow.cpp  editorwindow.h  main.cpp  techgraph.cpp  techgraph.h  techgraphview.cpp  techgraphview.h  unitsettingswidget.cpp  unitsettingswidget.h
